--- a/become.html
+++ b/become.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="favicon.png" />
     <meta name="theme-color" content="#e69221">
-    <title>MyGen</title>
+    <title>MyGen - Become A Coach</title>
 </head>
 <body>
 <!--============================== INICIO NAV ===========================-->
@@ -29,7 +29,7 @@
                         <li><a href="products.html">PRODUCTS</a></li>
                         <li><a href="">HOW IT WORKS</a></li>
                         <li><a href="">SUCCESS STORIES</a></li>
-                        <li><a href="become.html">BECOME A COACH</a></li>
+                        <li><a href="become.html" class="super">BECOME A COACH</a></li>
                         <li><a href="#!" id="shopbtn"><span class="shop">SHOP NOW</span></a></li>
                         <li><a href="" class="min-nav">SIGN IN</a></li>
                         <li><a href="" class="min-nav">ACTIVATE KIT</a></li>
@@ -59,15 +59,15 @@
         <ul class="slides">
 
           <li>
-            <img src="img/slides/slide1.jpg"> 
+            <img src="img/slides/slide2.jpg"> 
             <div class="caption left-align">
-                <h4 class="slide-text bold-text">
-                Genetic testing for<br>
-                personalized<br>
-                supplements
+                <h4 class="slide-text bold-text white-text">
+                    MyGEN professional <br>
+                    coach <br>
+                    program <br>
                 </h4>
-              <h6 class="slide-text light">Your are unique, so it should be<br>your supplements</h6><br>
-              <a href=""><span class="shop">SHOP NOW</span></a>
+              <h6 class="slide-text light white-text">Lead the next genetically-based <br> supplement and coaching <br> revolution</h6><br>
+              <a href=""><span class="shop white-text">APPLY NOW</span></a>
             </div>
           </li>
           
@@ -81,75 +81,113 @@
 
     <div id="firstMain" class="col s12 center-align">
         <div class="container">
-            <h5 class="bold-text" >WELCOME TO THE START OF A  <br> LIFE-CHANGING JOURNEY</h5> 
+            <h5 class="bold-text" >BENEFITS FOR BOTH, YOU AND <br> YOUR CUSTOMERS</h5> 
             <br>
-            <p>Tus genes no solo determinan como te ves, si no que también en como responde tu cuerpo al ejercicio físico, consumo alimentos  y a las condiciones del medio ambiente. Conocer y entender tus genes te permite hacer cambios en tu estilo de vida y ser la mejor versión de ti</p>
+            <p>Become a MyGEN professional coach and earn money providing your customers with genetic testing and personalized supplements to get
+                better and faster results. No need to buy our products and keep them in stock, your customers buy them through our webpage and you will
+                get paid, that simple!</p>
             <br>
-            <p class="bold-text">HOW IT WORKS</p>
-            <div id="how-it-works" class="col s12 m12 l8 push-l2 ">
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".1s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>1</p><span>asd</span></div>
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".2s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>2</p><span>YOU WILL RECEIVE A MYGEN COLLECTION KIT FOR TAKING BUCCAL SAMPLES</span></div>
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".3s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>3</p><span>SET A GOAL</span></div>
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".4s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>4</p><span>PRE-PAID SHIPPING TO TAAG LAB</span></div>
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".5s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>5</p><span>IN TWO WEEKS REVIEW YOUR DNA TEST RESULTS </span></div>
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".6s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>6</p><span>GET YOUR PERSONALIZED FORMULATION</span></div>
+            <div id="benefits" class="col s12 m12 l12">
+                <div class="col l3 m3 s6  min-text wow bounceInLeft" data-wow-delay=".0s"><img src="img/icons/better.png" alt="" class="benefits-img"><p>BETTER & <br> FASTER RESULTS</p><span>Personalize your customer’s supplements, nutrition and exercise plans to their unique DNA for improving effectiveness and getting faster and better results.</span></div>
+                <div class="col l3 m3 s6  min-text wow bounceInLeft" data-wow-delay=".1s"><img src="img/icons/increase.png" alt="" class="benefits-img"><p>INCREASE <br> SIGN-UPS</p><span>Differentiate your business and practice<br> to attract new potential customers and<br> increase client sign-ups</span></div>
+                <div class="col l3 m3 s6  min-text wow bounceInLeft" data-wow-delay=".2s"><img src="img/icons/improve.png" alt="" class="benefits-img"><p>IMPROVE <br> RETENTION</p><span>Customers who experience<br> personalized management with better<br> results are more likely to stay longer<br> with you</span></div>
+                <div class="col l3 m3 s6  min-text wow bounceInLeft" data-wow-delay=".3s"><img src="img/icons/increase-profits.png"  alt="" class="benefits-img"><p>INCREASE <br> PROFITS</p><span>Sell our genetic tests and supplements<br> and earn a percentage of the sale.<br> No need to buy and stock products, if<br>  your customers buy through our<br> webpage, you will get paid.</span></div>
             </div>
         </div>
     </div>
 
-    <div id="secondMain" class="col s12 center-align">
-        <div class="container">
-            <h5 class="bold-text">WE HELP YOU ALONG ALL <br> JOURNEY, NOT JUST THE BEGINNING</h5> <br>
-            <p>We take a comprehensive strategy so you can have truly actionable results. <br>It starts with genetic testing until personalized dietary supplements and expert advice to achieve your goals.</p>
-            <div id="secondMainImg" class="col s12">
-                <div class="col s6 m3">
-                    <img src="img/icons/dna-structure.svg" class="wow fadeIn" data-wow-delay=".1s" alt="">
-                    <p class="bold-text">YOUR DNA IS JUST THE BEGINNING</p>
-                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. aut quos reprehenderit ullam nisi eligendi?</span>
-                </div>
-                <div class="col s6 m3">
-                    <img src="img/icons/conversation.svg" class="wow fadeIn"  data-wow-delay=".2s" alt="">
-                    <p class="bold-text">YOUR DNA IS JUST THE BEGINNING</p>
-                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. aut quos reprehenderit ullam nisi eligendi?</span>
-                </div>
-                <div class="col s6 m3">
-                    <img src="img/icons/medicine.svg" class="wow fadeIn" data-wow-delay=".3s" alt="">
-                    <p class="bold-text">YOUR DNA IS JUST THE BEGINNING</p>
-                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. aut quos reprehenderit ullam nisi eligendi?</span>
-                </div>
-                <div class="col s6 m3">
-                    <img src="img/icons/bullseye.svg" class="wow fadeIn" data-wow-delay=".4s" alt="">
-                    <p class="bold-text">YOUR DNA IS JUST THE BEGINNING</p>
-                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. aut quos reprehenderit ullam nisi eligendi?</span>
-                </div>
+    <div id="howToJoinUs" class="col s12 left-align whi white-text">
+        <div id="howToJoinUsContent" class="col s12 m8 l5 push-m2  push-l7">
+            <h4 class="bold-text">HOW TO JOIN US</h4>
+            <p>Joining the MyGEN network is easy! All it takes is five easy steps:</p>
+            <ol class="col s12">
+                <li>Send us your CV</li>
+                <li>After reviewing your CV your will receive an email with your user <br> and pass to enter to the MyGEN professional coach <br> platform</li>
+                <li>Review and accept the business operation and conditions</li>
+                <li>Take and complete successfully the MyGEN online <br> education course</li>
+                <li>Get your MyGEN starter kit, which consists of 5 MyGEN <br> kits and marketing material.</li>
+            </ol>
+            <a href="" class="shop white-text">APPLY NOW</a>
+        </div>
+    </div>
+
+    <div class="col s12 center-align" id="yourSuccess">
+        <div class="">
+            <h4 class="bold-text">YOUR SUCCESS IS OUR GOAL</h4>
+            <br>
+            <p>
+            Next are some of the tools we give you to help you achieve your own sales goals. <br>
+             MyGEN professional coach program includes education, marketing and web platform solutions to help you effectively integrate DNA analysis into your business.
+
+            </p>
+        </div>
+    </div>
+
+    <div class="col s12" id="myGenOnline">
+            <div class="col s12 m6 l5 push-l1">
+                <img src="img/myGenOnline.png" class="responsive-img" alt="">
             </div>
-            <div class="col s12">
-                <img src="img/shadow.png" class="responsive-img" alt="">
-            </div>
-            <div class="col s12">
-                <img src="img/icons/atom.svg" class="col s6 m2 l2 push-s3 push-m5 push-l5 wow bounceIn" data-wow-delay=".5s" height="64px" width="64p`x" alt="">
-            </div>
-            <div class="col s6 m6 l6 push-s3 push-m3 push-l3">
-                <p class="bold-text">
-                    ACTIONABLE RESULTS!
+            <div class="col s12 m6 l5 push-l1">
+                <h5 class="bold-text">MyGEN ONLINE EDUCATION COURSE</h5>
+                <br>
+                <p>
+                        Access our online education platform to learn about genetics, how our genes
+                        influence our body and how the personalized supplements, nutrition and
+                        wellness plans work.
                 </p>
-                <span>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, delectus sapiente, vitae atque, animi.
-                </span>
-                <div id="getYourText">
-                    <a href="" class="shop black-text">GET YOUR TEXT</a>
-                </div>        
+
+                <p>
+                        The course has three phases to ensure that you fully understand the science,
+                        the products and how to use genetic information to achieve better and faster
+                        results.
+                </p>
             </div>
+    </div>
+
+    <div class="col s12" id="marketingMaterial">
+        <div class="col s12 m6 l5 push-l1 white-text">
+            <h5 class="bold-text">MARKETING MATERIAL AND SUPPORT</h5>
+            <br>
+            <p>
+            We provide you with professional marketing material to help you explain how
+            out genetics tests and supplements work. Our marketing team can provide
+            you with digital and point of sale marketing material to maximize exposure,
+            interest and uptake.
+            </p>
+        </div>   
+        <div >
+            <img src="img/marketingMaterial.png" class="col s12 m6 l5 push-l1 responsive-img " alt="">
+        </div>           
+    </div>
+
+    <div class="col s12" id="costumerResults">
+        <div class="col s12 m6 l5 push-l1">
+            <img src="img/costumerResults.png" class="responsive-img" alt="">
+        </div>
+        <div class="col s12 m6 l5 push-l1">
+            <h5 class="bold-text">VISUALIZE YOUR CUSTOMER RESULTS <br> AND YOUR BUSINESS PERFORMANCE</h5>
+            <br>
+            <p>
+                    In your dashboard you will have access to information about the genetic tests
+                    and supplement you have sold, who bought them, your next payment and
+                    new products.
+            </p>
+    
+            <p>
+                    The MyGEN results are online, so your customers can share their genetic
+                    reports and actionable recommendations with you, so that you can tailor their
+                    workout and nutrition plans to their unique DNA profile.
+            </p>
         </div>
     </div>
 
-    <div class="col s12 center-align" id="thirdMain">
+    <div class="col s12 center-align white-text" id="myGenPro">
         <div class="container">
-            <p class="bold-text">OUR COMMITMENT</p>
-            <p>MyGen products are committed to delivering you the most update scientific recommendations. As the science
-                evolves, so will your results, supplement and nutrition plan. We're committed to an ongoing relationship with you—so
-                you always will have new genetic tests and supplements available to help you to reach your goals and to achieve the      
-                best version of you.</p>
+            <p class="bold-text">BECOME A MyGEN PROFESSIONAL COACH</p>
+            <p>
+            Tell us about your interests and learn more about how MyGEN can genetically upgrade your business
+            </p>
+            <a href="" class="shop white-text">APPLY NOW</a>
         </div>
     </div>
 
